# mma_ranking

./: .gitignore  Makefile  README.md  fighters copy.py  pyproject.toml  requirements.txt  setup.py
Notebooks/UFC_ranking/: UFC_ranking.ipynb  UFC_ranking_new.ipynb  final_run_notebook.ipynb
Plots/: anime_fighters.ipynb  bar_char_race.ipynb
UFC_ranking/: UFC_ranking.ipynb  pfp_ranking.csv  rank_long_20240322_1102.csv  w_ranking.csv
UFC_ranking/.ipynb_checkpoints/: UFC_ranking-checkpoint.ipynb
mma_app/: config.py
mma_app/ranking/: __init__.py  preprocess.py
mma_app/ufcstat_scrapy/: Commands.txt
mma_app/ufcstat_scrapy/ufcstat_scrapy/: settings.py
mma_app/ufcstat_scrapy/ufcstat_scrapy/spiders/: events.py  fighter_crawl.py  scraping_config.py
mma_ranking/: config.py
mma_ranking/ranking/: __init__.py  network_ranking.py  preprocess.py
mma_ranking/ufcstat_scrapy/ufcstat_scrapy/: middlewares.py
mma_ranking/ufcstat_scrapy/ufcstat_scrapy/spiders/: fighter_crawl.py  fighters.py
ufcstat_scrapy/: Commands.txt  fighters_data.csv  fighters_new.csv  scrapy.cfg
ufcstat_scrapy/ufcstat_scrapy/: items.py  middlewares.py  pipelines.py
ufcstat_scrapy/ufcstat_scrapy/spiders/: fighters.py
your_package_name.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
