[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_package_name"
version = "0.1.0"
authors = [{name = "Your Name"}]
dependencies = [
    # list your project's dependencies here
    # e.g., "requests", "pandas>=1.0.0",
]

[project.scripts]
your_script_name = "your_module:main_function_name"
